@@ -4,7 +4,7 @@
 aafigure extension for Sphinx
 =============================
 
-:copyright: Copyright 2009 by Leandro Lucarella <llucax@gmail.com>.
+:author: Leandro Lucarella <llucax@gmail.com>
 
 
 About
